# pluma

./: Cargo.toml  README.md
00_unanchay/pluma/pluma-align-embeddings/: Cargo.toml
00_unanchay/pluma/pluma-app/: Cargo.toml
00_unanchay/pluma/pluma-editor-llimphi/: Cargo.toml
00_unanchay/pluma/pluma-notebook-core/: Cargo.toml
00_unanchay/pluma/pluma-notebook-graph-llimphi/: Cargo.toml
00_unanchay/pluma/pluma-notebook-kernel-media/: Cargo.toml
00_unanchay/pluma/pluma-notebook-kernel-tinkuy/: Cargo.toml
00_unanchay/pluma/pluma-notebook-llimphi/: Cargo.toml
00_unanchay/pluma/pluma-semantic/: Cargo.toml
