[package]
name = "pluma-notebook-kernel-media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
media-core = { workspace = true }
media-source-mp3 = { workspace = true }
media-source-wav = { workspace = true }
pluma-notebook-core = { path = "../pluma-notebook-core" }
pluma-notebook-exec = { path = "../pluma-notebook-exec" }
png = { workspace = true }
